--- a/public/layout.html
+++ b/public/layout.html
@@ -40,6 +40,122 @@
       </span>
       <span class="window-close">x</span>
       <div class="chat-dialog">
+        <div class="chat-info">
+          <span class="chat-info-contact">
+            Guilherme Cavalcanti
+          </span>
+          <span class="chat-contact-status">(online)</span>
+          <span class="chat-status">enviando...</span>
+          <span class="chat-minimize">–</span>
+        </div>
+        <div class="chat-text">
+          <ol>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+            <li>
+              <span class="chat-time">hoje, 21:24</span>
+              <div class="chat-dialog-thumb">
+                <img src="images/user-24.png" width="24" height="24">
+              </div>
+              <span class="chat-line">lorem lipsum</span>
+              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+            </li>
+          </ol>
+        </div>
         <div class="chat-input">
           <input type="text">
         </div>
