using html entity for minimize symbol

--- a/public/layout.html
+++ b/public/layout.html
@@ -46,7 +46,7 @@
           </span>
           <span class="chat-contact-status">(online)</span>
           <span class="chat-status">enviando...</span>
-          <span class="chat-minimize">–</span>
+          <span class="chat-minimize">&minus;</span>
         </div>
         <div class="chat-text">
           <ol>
