--- a/public/layout.html
+++ b/public/layout.html
@@ -8,161 +8,266 @@
 </head>
 <body>
 
-<ul class="chat-tray">
-  <li class="window-wrapper">
-    <div class="window-item window-item-ding">
-      <span class="chat-contact">
-        Guilherme Cavalcanti
+<div class="chat-tray">
+  <div class="chat-contacts">
+    <div class="chat-contacts-tray chat-contacts-tray-open">
+      <span class="chat-contacts-label">
+        Chat (222)
       </span>
-      <span class="window-close">x</span>
-    </div>
-  </li>
-  <li class="window-wrapper">
-    <div class="window-item">
-      <span class="chat-contact">
-        Guilherme Cavalcanti
-      </span>
-      <span class="window-close">x</span>
-    </div>
-  </li>
-  <li class="window-wrapper">
-    <div class="window-item window-item-opened">
-      <span class="chat-contact">
-        Guilherme Cavalcanti
-      </span>
-      <span class="window-close">x</span>
-    </div>
-  </li>
-  <li class="window-wrapper">
-    <div class="window-item window-item-ding window-item-opened">
-      <span class="chat-contact">
-        Guilherme Cavalcanti
-      </span>
-      <span class="window-close">x</span>
-      <div class="chat-dialog">
-        <div class="chat-info">
-          <span class="chat-info-contact">
-            Guilherme Cavalcanti
-          </span>
-          <span class="chat-contact-status">(online)</span>
-          <span class="chat-status">enviando...</span>
-          <span class="chat-minimize">&minus;</span>
-        </div>
-        <div class="chat-text">
-          <ol>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-            <li>
-              <span class="chat-time">hoje, 21:24</span>
-              <div class="chat-dialog-thumb">
-                <img src="images/user-24.png" width="24" height="24">
-              </div>
-              <span class="chat-line">lorem lipsum</span>
-              <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
-            </li>
-          </ol>
-        </div>
-        <div class="chat-input">
-          <input type="text">
-        </div>
+      <div class="chat-contacts-list">
+        <span class="chat-contacts-title">Chat</span>
+        <span class="chat-minimize">&minus;</span>
+        <ul>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+          <li class="chat-contact-item">
+            <img src="images/user-24.png" alt="" class="chat-contact-thumb" />
+            <span class="chat-contact-username">Guilherme Cavalcanti</span>
+            <span class="chat-contact-status">online</span>
+            <span class="chat-contact-role">Professor</span>
+          </li>
+        </ul>
       </div>
     </div>
-  </li>
-</ul>
+  </div>
+  <ul>
+    <li >
+      <div class="window-item window-item-ding">
+        <span class="chat-contact">
+          Guilherme Cavalcanti
+        </span>
+        <span class="window-close">x</span>
+      </div>
+    </li>
+    <li >
+      <div class="window-item">
+        <span class="chat-contact">
+          Guilherme Cavalcanti
+        </span>
+        <span class="window-close">x</span>
+      </div>
+    </li>
+    <li >
+      <div class="window-item window-item-opened">
+        <span class="chat-contact">
+          Guilherme Cavalcanti
+        </span>
+        <span class="window-close">x</span>
+      </div>
+    </li>
+    <li >
+      <div class="window-item window-item-ding window-item-opened">
+        <span class="chat-contact">
+          Guilherme Cavalcanti
+        </span>
+        <span class="window-close">x</span>
+        <div class="chat-dialog">
+          <div class="chat-info">
+            <span class="chat-info-contact">
+              Guilherme Cavalcanti
+            </span>
+            <span class="chat-contact-status">(online)</span>
+            <span class="chat-status">enviando...</span>
+            <span class="chat-minimize">&minus;</span>
+          </div>
+          <div class="chat-text">
+            <ol>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+              <li>
+                <span class="chat-time">hoje, 21:24</span>
+                <div class="chat-dialog-thumb">
+                  <img src="images/user-24.png" width="24" height="24">
+                </div>
+                <span class="chat-line">lorem lipsum</span>
+                <span class="chat-line">loreem lorem lorem lipsum ipsum lore darj</span>
+              </li>
+            </ol>
+          </div>
+          <div class="chat-input">
+            <input type="text">
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
 
 </body>
 </html>
